--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 # Server configuration
-KETCH_EVENT_FORWARDER_SERVER_LISTEN=5000
-KETCH_EVENT_FORWARDER_SERVER_TLS_CERT_FILE=.certs/server.crt
-KETCH_EVENT_FORWARDER_SERVER_TLS_KEY_FILE=.certs/server.key
+KETCH_LISTEN=5000
+KETCH_TLS_CERT_FILE=.certs/server.crt
+KETCH_TLS_KEY_FILE=.certs/server.key
