chore(docs): Remove shipbuilder references and other docs

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,4 @@
 # Server configuration
-KETCH_LISTEN=5000
-KETCH_TLS_CERT_FILE=.certs/server.crt
-KETCH_TLS_KEY_FILE=.certs/server.key
+export KETCH_LISTEN=5000
+export KETCH_TLS_CERT_FILE=.certs/server.crt
+export KETCH_TLS_KEY_FILE=.certs/server.key
