--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,44 +37,6 @@ jobs:
           body: "*pending*"
           token: ${{ env.GITHUB_TOKEN }}
 
-  build-push-node:
-    name: Build Node module
-    runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    needs:
-      - draft-release
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
-      - name: Setup npmrc for ketch-com
-        uses: conventional-actions/setup-npmrc@v1
-        with:
-          always-auth: true
-          scope: ketch-com
-          token: ${{ secrets.GH_TOKEN }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Build
-        run: npm run all
-      - name: Setup Node version
-        uses: conventional-actions/write-version@v1
-        with:
-          output_path: package.json
-          version: ${{ needs.draft-release.outputs.version-patch }}
-      - name: Publish
-        run: npm publish
-
   build-push-go:
     name: Build go
     runs-on: ubuntu-latest
@@ -84,8 +46,9 @@ jobs:
       matrix:
         images:
           - githubRegistry: ghcr.io/ketch-com/ketch-event-forwarder
-            ecrRepository: ketch-event-forwarder
+            # ecrRepository: ketch-event-forwarder
             localRegistry: localhost:5000/ketch-com/ketch-event-forwarder
+            dockerfile: docker/ketch-event-forwarder/Dockerfile
       fail-fast: false
     env:
       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -98,18 +61,18 @@ jobs:
           - 5000:5000
     steps:
       - uses: actions/checkout@v4
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          registries: "337034319268"
-          mask-password: "true"
+      # - name: Configure AWS Credentials
+      #   uses: aws-actions/configure-aws-credentials@v2
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: us-west-2
+      # - name: Login to Amazon ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v1
+      #   with:
+      #     registries: "337034319268"
+      #     mask-password: "true"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Setup .netrc
@@ -128,7 +91,7 @@ jobs:
         with:
           images: |
             ${{ matrix.images.githubRegistry }}
-            ${{ steps.login-ecr.outputs.registry }}/${{ matrix.images.ecrRepository }}
+            # ${{ steps.login-ecr.outputs.registry }}/${{ matrix.images.ecrRepository }}
           tags: |
             type=raw,value=latest
             type=raw,value=${{ needs.draft-release.outputs.version-major }}
@@ -187,7 +150,6 @@ jobs:
     needs:
       - draft-release
       - build-push-go
-      - build-push-node
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
