--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ matrix.images.githubRegistry }}
+            # ${{ matrix.images.githubRegistry }}
             # ${{ steps.login-ecr.outputs.registry }}/${{ matrix.images.ecrRepository }}
           tags: |
             type=raw,value=latest
