--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     name: Prepare next version
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       contents: write
     outputs:
@@ -35,7 +35,7 @@ jobs:
           tag: ${{ steps.semver.outputs.version }}
           name: ${{ steps.semver.outputs.version }}
           body: "*pending*"
-          # token: ${{ env.GITHUB_TOKEN }}
+          token: ${{ env.GITHUB_TOKEN }}
 
   build-push-go:
     name: Build go
@@ -46,12 +46,12 @@ jobs:
       matrix:
         images:
           - localRegistry: localhost:5000/ketch-com/ketch-event-forwarder
-            # githubRegistry: ghcr.io/ketch-com/ketch-event-forwarder
+            githubRegistry: ghcr.io/ketch-com/ketch-event-forwarder
             # ecrRepository: ketch-event-forwarder
             dockerfile: docker/ketch-event-forwarder/Dockerfile
       fail-fast: false
     env:
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       contents: read
     services:
@@ -90,19 +90,19 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            # ${{ matrix.images.githubRegistry }}
+            ${{ matrix.images.githubRegistry }}
             # ${{ steps.login-ecr.outputs.registry }}/${{ matrix.images.ecrRepository }}
           tags: |
             type=raw,value=latest
             type=raw,value=${{ needs.draft-release.outputs.version-major }}
             type=raw,value=${{ needs.draft-release.outputs.version-minor }}
             type=raw,value=${{ needs.draft-release.outputs.version-patch }}
-      # - name: Login to GitHub Container Registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ env.GITHUB_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ env.GITHUB_TOKEN }}
       - name: Build docker image
         uses: docker/build-push-action@v5
         id: dockerbuild
@@ -130,20 +130,20 @@ jobs:
       #   with:
       #     image: ${{ matrix.images.localRegistry }}:latest
       #     args: --file=${{ env.DOCKERFILE }} --severity-threshold=high --platform=linux/arm64
-      # - name: Push docker images
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     platforms: linux/arm64,linux/amd64
-      #     file: ${{ matrix.images.dockerfile }}
-      #     push: true
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     labels: ${{ steps.meta.outputs.labels }}
-      #     cache-from: type=gha
-      #     cache-to: type=gha,mode=max
-      #     provenance: false
-      #     secret-files: |
-      #       "netrc=/home/runner/.netrc"
+      - name: Push docker images
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/arm64,linux/amd64
+          file: ${{ matrix.images.dockerfile }}
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
+          secret-files: |
+            "netrc=/home/runner/.netrc"
 
   release:
     name: Finalize release
@@ -152,7 +152,7 @@ jobs:
       - build-push-go
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       contents: write
     steps:
@@ -162,7 +162,7 @@ jobs:
           allowUpdates: true
           tag: ${{ needs.draft-release.outputs.version }}
           name: ${{ needs.draft-release.outputs.version }}
-          # token: ${{ env.GITHUB_TOKEN }}
+          token: ${{ env.GITHUB_TOKEN }}
 
   # deploy:
   #   name: Deploy to UAT
@@ -175,7 +175,7 @@ jobs:
   #     version: ${{ needs.draft-release.outputs.version-patch }}
   #     service: ketch-event-forwarder
   #   secrets:
-  #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #     GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
   #     GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
